系统框架创建

--- a/Wwh.MVC.Web/Views/Home/Index.cshtml
+++ b/Wwh.MVC.Web/Views/Home/Index.cshtml
@@ -1,4 +1,8 @@
-﻿
+﻿@{
+    Layout = null;
+}
+
+
 <!DOCTYPE html>
 
 <html>
@@ -18,8 +22,8 @@
     <div data-options="region:'north',border:false,split:true" style="height: 60px;">
         <div class="define-head">
             <div class="define-logo">
-                <div id="LoginTopLine">System Manage</div>
-                <div id="LoginBotoomLine">MVC4+EF5.0+EasyUI</div>
+                <div id="LoginTopLine">YmNets.cnblogs.com/</div>
+                <div id="LoginBotoomLine">MVC5+EF6.0+EasyUI</div>
             </div>
             <div class="define-account">
 
