--- a/Wwh.MVC.Web/Views/Home/Index.cshtml
+++ b/Wwh.MVC.Web/Views/Home/Index.cshtml
@@ -9,8 +9,8 @@
 <head>
     <title>Index</title>
     <meta name="viewport" content="width=device-width" />
-    <script src="@Url.Content("~/Scripts/jquery.min.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/jquery.easyui.min.js")" type="text/javascript"></script>
+    @Scripts.Render("~/bundles/jquery");
+    @Scripts.Render("~/bundles/easyui");
     @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/themes/blue/css")
     @Scripts.Render("~/bundles/home")
