--- a/Wwh.MVC.Web/Views/Home/Index.cshtml
+++ b/Wwh.MVC.Web/Views/Home/Index.cshtml
@@ -9,9 +9,9 @@
 <head>
     <title>Index</title>
     <meta name="viewport" content="width=device-width" />
-    @Scripts.Render("~/bundles/jquery");
-    @Scripts.Render("~/bundles/easyui");
-    @Styles.Render("~/Content/css")
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/easyui")
+    @Styles.Render("~/bundles/homecss")
     @Styles.Render("~/Content/themes/blue/css")
     @Scripts.Render("~/bundles/home")
 </head>
@@ -26,7 +26,6 @@
                 <div id="LoginBotoomLine">MVC5+EF6.0+EasyUI</div>
             </div>
             <div class="define-account">
-
             </div>
         </div>
     </div>
