--- a/Wwh.MVC.Web/Views/Home/Index.cshtml
+++ b/Wwh.MVC.Web/Views/Home/Index.cshtml
@@ -22,7 +22,7 @@
     <div data-options="region:'north',border:false,split:true" style="height: 60px;">
         <div class="define-head">
             <div class="define-logo">
-                <div id="LoginTopLine">YmNets.cnblogs.com/</div>
+                <div id="LoginTopLine">Wwh.cnblogs.com/</div>
                 <div id="LoginBotoomLine">MVC5+EF6.0+EasyUI</div>
             </div>
             <div class="define-account">
