--- a/Wwh.MVC.Web/Views/Home/Index.cshtml
+++ b/Wwh.MVC.Web/Views/Home/Index.cshtml
@@ -1,49 +1,16 @@
 ﻿@{
-    Layout = null;
+    ViewBag.Title = "Home Page";
 }
 
-
-<!DOCTYPE html>
-
-<html>
-<head>
-    <title>Index</title>
-    <meta name="viewport" content="width=device-width" />
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/easyui")
-    @Styles.Render("~/bundles/homecss")
-    @Styles.Render("~/Content/themes/blue/css")
-    @Scripts.Render("~/bundles/home")
-</head>
-<body class="easyui-layout">
-    <div id="OverTimeLogin" class="easyui-dialog" data-options="closed:true,modal:true">
-        <iframe width="726px" scrolling="no" height="497px" frameborder="0" id="iOverTimeLogin"></iframe>
-    </div>
-    <div data-options="region:'north',border:false,split:true" style="height: 60px;">
-        <div class="define-head">
-            <div class="define-logo">
-                <div id="LoginTopLine">Wwh.cnblogs.com/</div>
-                <div id="LoginBotoomLine">MVC5+EF6.0+EasyUI</div>
-            </div>
-            <div class="define-account">
-            </div>
-        </div>
-    </div>
-    <div data-options="region:'west',split:true,title:'菜单列表'" style="width: 200px; height:100%; padding-top: 2px; background-color:#fff; overflow:auto">
+<div class="easyui-layout" style="width:100%; height:700px;">
+    <div data-options="region:'west',split:true,title:'菜单列表'" style="width: 200px; height:100%; background-color:#fff; overflow:hidden">
         <div id="RightTree" style=" background-color:#fff;">
-            <div class="panel-loading">加载中...</div>
+            
         </div>
     </div>
-    <div data-options="region:'south',border:false" style="height: 20px;">
-        <div class="define-bottom">
-
-
-        </div>
-    </div>
-    <div data-options="region:'center',border:false">
+    <div data-options="region:'center',border:false" class="content-padding">
         <div id="mainTab" class="easyui-tabs" data-options="fit:true">
             <div title="我的桌面" data-options="closable:true" style="overflow: hidden; background:#fff">
-                <iframe scrolling="auto" frameborder="0" src="" style="width: 100%; height: 100%;"></iframe>
             </div>
         </div>
     </div>
@@ -74,5 +41,4 @@
         <div id="menu" class="easyui-menu" style="width: 150px;">
         </div>
     </div>
-</body>
-</html>
+</div>
