--- a/Wwh.Mvc.Web/Content/Site.css
+++ b/Wwh.Mvc.Web/Content/Site.css
@@ -10,7 +10,7 @@ html, body {
 
 body {
     font: 12px/1.33 "微软雅黑",Verdana,"宋体",Helvetica,sans-serif;
-    background-color: #fff
+    background-color: #fff;
 }
 /*通用
 ===============================================*/
