--- a/Wwh.MVC.Web/Views/Home/Index.cshtml
+++ b/Wwh.MVC.Web/Views/Home/Index.cshtml
@@ -4,14 +4,18 @@
 
 <div class="easyui-layout" style="width:100%; height:700px;">
     <div data-options="region:'west',split:true,title:'菜单列表'" style="width: 200px; height:100%; background-color:#fff; overflow:hidden">
-        <div id="RightTree" style=" background-color:#fff;">
-            
+        <div id="RightTree" style=" background-color:#fff;">            
         </div>
     </div>
     <div data-options="region:'center',border:false" class="content-padding">
         <div id="mainTab" class="easyui-tabs" data-options="fit:true">
             <div title="我的桌面" data-options="closable:true" style="overflow: hidden; background:#fff">
             </div>
+        </div>
+    </div>
+    <div data-options="region:'south',border:false" style="height:50px;background:#DAEEF5;padding:10px; margin:10px 0px 0px 0px; padding-top:15px;">
+        <div class="text-center">
+            &copy; 2017~2018 VERSOIN
         </div>
     </div>
     <div id="tab_menu" class="easyui-menu" style="width: 150px;">
