修改页面样式

--- a/Wwh.MVC.Web/Views/Home/Index.cshtml
+++ b/Wwh.MVC.Web/Views/Home/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = null;
 }
 
 <div class="easyui-layout" style="width:100%; height:700px;">
     <div data-options="region:'west',split:true,title:'菜单列表'" style="width: 200px; height:100%; background-color:#fff; overflow:hidden">
-        <div id="RightTree" style=" background-color:#fff;">            
+        <div id="RightTree" style=" background-color:#fff;"> 
         </div>
     </div>
     <div data-options="region:'center',border:false" class="content-padding">
@@ -13,9 +13,9 @@
             </div>
         </div>
     </div>
-    <div data-options="region:'south',border:false" style="height:50px;background:#DAEEF5;padding:10px; margin:10px 0px 0px 0px; padding-top:15px;">
+    <div data-options="region:'south',border:false" style="height:40px;background:#DAEEF5; margin:10px 0px 0px 0px; padding-top:10px;">
         <div class="text-center">
-            &copy; 2017~2018 VERSOIN
+            &copy; Copyright Ymnet 2017~2018 VERSOIN 1.0
         </div>
     </div>
     <div id="tab_menu" class="easyui-menu" style="width: 150px;">
