--- a/Wwh.MVC.Web/Views/Shared/_Layout.cshtml
+++ b/Wwh.MVC.Web/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - 尚湘学子 MVC5 应用程序</title>
+    <title>尚湘学子 MVC5 应用框架</title>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/easyui")
     @Scripts.Render("~/bundles/bootstrap")
@@ -15,12 +15,10 @@
 
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header define-head">
-                <div class="define-logo">
-                    <div id="LoginTopLine">Wwh.cnblogs.com</div>
-                    <div id="LoginBotoomLine">MVC5+EF6.0+EasyUI</div>
-                </div>
+        <div class="navbar-header define-head">
+            <div class="define-logo">
+                <div id="LoginTopLine">Wwh.cnblogs.com</div>
+                <div id="LoginBotoomLine">MVC5+EF6.0+EasyUI</div>
             </div>
         </div>
     </div>
@@ -29,6 +27,6 @@
         @RenderBody()
     </div>
 
-    
+
 </body>
 </html>
